Bug 45310 - userdefined groupnames missing when importing xlsx pivot tables
Summary: userdefined groupnames missing when importing xlsx pivot tables
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Noel Power
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-27 07:07 UTC by Noel Power
Modified: 2024-04-27 07:24 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Noel Power 2012-01-27 07:07:50 UTC
whilst the groupnames ( as indicated by the xml ) are imported these names are basically what Excel autogenerates, the user defined captions for those groupnames are ignored. See https://bugs.freedesktop.org/attachment.cgi?id=56182 attached to issue #45268 where the groupnames are displayed as Group1 & Group2, the names displayed in Excel though are '1-3 days' and '4-7 days'
Comment 1 Noel Power 2012-01-27 07:08:08 UTC
taking this
Comment 2 Noel Power 2012-02-16 01:59:39 UTC
fixed on master:3d62ea9a928c4a814369d5b6c276ac78239aeeeb
Comment 3 Jasper Wilde 2024-01-31 08:44:12 UTC Comment hidden (spam)
Comment 4 Charmaine9x 2024-03-19 02:02:16 UTC Comment hidden (spam)